--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.5.0"
 commonsCodec = "1.15"
+commonsIoVersion = "1.3.2"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -10,6 +11,7 @@ constraintlayout = "2.1.4"
 activity = "1.9.0"
 
 [libraries]
+apache-commons-io = { module = "org.apache.commons:commons-io", version.ref = "commonsIoVersion" }
 commons-codec = { module = "commons-codec:commons-codec", version.ref = "commonsCodec" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
